--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,43 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: "roboto";
+
+
 }
+.log{
+    display: flex;
+    align-items: stretch;
+    height: 30px;
+    padding: 5px ;
+
+}
+.infopessoias {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 90%;
+    text-align: center;
+    padding: 30px;
+        background: #ee0979; /* fallback for old browsers */
+        background: -webkit-linear-gradient(
+          to right,
+          #ff6a00,
+          #ee0979
+        ); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(
+          to right,
+          #ff6a00,
+          #ee0979
+        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -mo-text-fill-color: transparent;
+      }
+    
